--- a/ATS/Quiz-service/package.json
+++ b/ATS/Quiz-service/package.json
@@ -9,6 +9,7 @@
   "author": "Rohan Julka",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
